# FILM-BOT

./: .env.dist  .gitignore  README.md  main.py  pyproject.toml
film_bot/: __init__.py  __main__.py  api.py  bot.py  config.py  db.py  main.py  messages.py  models.py  old_db.py
