[project]
name = "film-bot"
version = "0.1.0"
description = "Telegram bot for selecting anime and doramas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings==2.9.1",
    "aiogram==3.20.0.post0",
    "loguru==0.7.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "RUF001", "RUF002", "RUF003",
    "FIX002", "TD002", "TD003",
]